--- a/k8s-devops/section12/demo/values.yml
+++ b/k8s-devops/section12/demo/values.yml
@@ -1,7 +1,7 @@
-environment: development
+environment: dev
 container:
   name: demo
   port: 8888
   image: cloudnatived/demo
   tag: hello
-replicas: 1
+replacas: 1
